fix too long words in small-post in neighbours view

--- a/assets/app/components/focus/neighbours/neighbours.scss
+++ b/assets/app/components/focus/neighbours/neighbours.scss
@@ -89,7 +89,7 @@
         .small_post_directive {
             text-align: left;
             margin-bottom:0;
-            width: 100%;
+            width: $small-post-max-width;
         }
         margin-bottom: 5px;
         .connection {
